--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "build-exports": "gulp build-exports"
   },
   "dependencies": {
-    "@material-ui/core": "^3.4.0"
+    "@material-ui/core": "^3.4.0",
+    "@material-ui/icons": "^3.0.1"
   }
 }
